federated-catalogue/00-federated-catalogue-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: federated-catalogue
  labels:
    name: federated-catalogue
---
