federated-catalogue/20-redis-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: federated-catalogue
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.0.11-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 6
        args:
        - --appendonly
        - "yes"
        ports:
        - containerPort: 6379
          name:  redis
          protocol: TCP
        volumeMounts:
        - name: redis-data-pvc
          mountPath: /data
      volumes: 
        - name: redis-data-pvc
          persistentVolumeClaim:
            claimName: redis-data-pvc
      restartPolicy: Always
---
