federated-catalogue/40-graphdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphdb
  namespace: federated-catalogue
spec:
  selector:
    app: graphdb
  type: ClusterIP
  ports:
  - name: graphdb
    protocol: TCP
    port: 7200
    targetPort: 7200
---
