federated-catalogue/50-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: federated-catalogue
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - name: redis
    protocol: TCP
    port: 6379
    targetPort: 6379
---
