federated-catalogue/70-catalogue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
  name: catalogue
  namespace: federated-catalogue
spec:
  rules:
  - host: catalogue.${PUBLIC_NODE_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: catalogue
            port:
              number: 5002
        path: /
        pathType: Prefix
---
